// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scaffold app structure When the new app structure does NOT exist should create it 1`] = `
"import { NgModule } from '@angular/core';



@NgModule({
  declarations: [],
  imports: [
  ]
})
export class SpartacusFeaturesModule { }
"
`;

exports[`scaffold app structure When the new app structure does NOT exist should create it 2`] = `
"import { NgModule } from '@angular/core';



@NgModule({
  declarations: [],
  imports: [
  ]
})
export class SpartacusConfigurationModule { }
"
`;

exports[`scaffold app structure When the new app structure does NOT exist should create it 3`] = `
"import { NgModule } from '@angular/core';
import { SpartacusFeaturesModule } from './spartacus-features.module';
import { SpartacusConfigurationModule } from './spartacus-configuration.module';



@NgModule({
  declarations: [],
  imports: [
  
    SpartacusFeaturesModule,
       SpartacusConfigurationModule
  ]
})
export class SpartacusModule { }
"
`;

exports[`scaffold app structure When the new app structure is already in place should not touch it 1`] = `
"
import { NgModule } from '@angular/core';
import { AsmFeatureModule } from './features/asm/asm-feature.module';

@NgModule({
  declarations: [],
  imports: [AsmFeatureModule],
})
export class SpartacusFeaturesModule {}
"
`;

exports[`scaffold app structure When the new app structure is already in place should not touch it 2`] = `
"import { NgModule } from '@angular/core';
import { provideConfig } from '@spartacus/core';
import { layoutConfig } from '@spartacus/storefront';

@NgModule({
  providers: [provideConfig(layoutConfig)],
})
export class SpartacusConfigurationModule {}
"
`;

exports[`scaffold app structure When the new app structure is already in place should not touch it 3`] = `
"
import { NgModule } from '@angular/core';
import { BaseStorefrontModule } from \\"@spartacus/storefront\\";
import {MyFeature} from './my-feature.module';
import { SpartacusConfigurationModule } from './spartacus-configuration.module';
import { SpartacusFeaturesModule } from './spartacus-features.module';

@NgModule({
  declarations: [],
  imports: [
    MyFeature,
    SpartacusFeaturesModule,
    SpartacusConfigurationModule,
    BaseStorefrontModule
  ],
  exports: [BaseStorefrontModule]
})
export class SpartacusModule { }
"
`;
